@@ -15,6 +15,7 @@
   - Fix long link word wrap in PDF. BZ #923481
   - Support case-insensitive "language" attribute. BZ #919474
   - Apply title style patch from Jaromir Hradilek. BZ #924518
+  - Expose %book_ver_list to products/version_index.tmpl. BZ #962643
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
